--- a/Exercice2/Exercice2.csproj
+++ b/Exercice2/Exercice2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C30D28BD-7AD4-4A81-8325-4A580932CF4E}</ProjectGuid>
+    <ProjectGuid>{1F0DDD78-4848-4137-B8C4-C15B4E4F18DD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercice1_1</RootNamespace>
-    <AssemblyName>Exercice1_1</AssemblyName>
+    <RootNamespace>Exercice2</RootNamespace>
+    <AssemblyName>Exercice2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exercice1_1.cs" />
+    <Compile Include="Exercice2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
